<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="540dp"
        android:background="@drawable/card_style"
        android:orientation="vertical">


        <ImageView
            android:layout_width="64dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            app:srcCompat="@drawable/ic_baseline_person_pin_24" />

        <EditText
            android:id="@+id/user_phone"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="35dp"
            android:background="@drawable/et_style"
            android:ems="11"
            android:gravity="center"
            android:hint="@string/input_phone"
            android:inputType="textPersonName"
            android:padding="5dp" />

        <EditText
            android:id="@+id/user_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/et_style"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:padding="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/btn_style"
                android:text="@string/btn_register"
                android:textColor="#5F6468"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/btn_style"
                android:text="@string/btn_login"
                android:textColor="#5F6468"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/app_version" />
</LinearLayout>