<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/car_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/btn_style"
    android:padding="15dp">

    <ImageView
        android:id="@+id/img_car"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/ic_baseline_directions_car_512" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_margin="15dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_brand" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_price" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_date" />
    </LinearLayout>
</LinearLayout>